# fab-theme-adminlte

./: .gitignore  README.md  app.db  config.py  pyproject.toml
app/: __init__.py
app/templates/adminlte/: baselayout.html  init.html
app/templates/adminlte3/: baselayout.html  init.html  navbar.html  navbar_right.html
app/templates/adminlte3/general/: lib.html
app/templates/appbuilder/: baselayout.html  footer.html  init.html  navbar.html  navbar_right.html
app/templates/appbuilder/general/: alert.html  confirm.html
app/templates/appbuilder/general/model/: show.html
app/templates/appbuilder/general/security/: login_db.html
