[tool.poetry]
name = "fab-theme-adminlte"
version = "0.1.0"
description = ""
authors = ["Mario Hernandez <mariofix@pm.me>"]
readme = "README.md"
packages = [{include = "fab_theme_adminlte"}]

[tool.poetry.dependencies]
python = "^3.9"
flask-appbuilder = "^4.1.5"
flask-debugtoolbar = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
